2009-08-08  Giulio Eulisse <giulio.eulisse@cern.ch>

	* igprof-navigator: support for IgProfMemLive and IgProfMemMax named
	  files added until some decision is actually made on the naming
	  convention. 

2009-08-07  Giulio Eulisse <giulio.eulisse@cern.ch>

	* igprof-navigator: fixes a bug where dates were not taken into 
	  account when splitting results in multiple tables. 

	* igprof-navigator: cosmetic fixes. 

2009-07-27  Giulio Eulisse <giulio.eulisse@cern.ch>

	* igprof-navigator: fixes a bug where dates were not taken into
	  account when splitting results in multiple tables.

	* 

	* igprof-navigator: link back to the index added to the summary page.

	* igprof-navigator: improved header for the summary.

	* igprof-navigator: correctly shows the percentage of total also
	  for the PERF_TICK reports.

	* igprof-navigator: various clean ups to the look and feel of the
	  main page.

	* igprof-navigator: Do not print verbose error messages when
	  quering the DB fails.
	
	* igprof-navigator: Do not show 0-sized files.

	* igprof-navigator: Improved style for the summary tables.
	
2009-07-26  Giulio Eulisse <giulio.eulisse@cern.ch>

	* igprof-navigator: New front page for the CGI version.

2009-07-22  Giulio Eulisse <giulio.eulisse@cern.ch>

	* IgProfAnalyse.cc, IgProfAnalyse.h: handles the case in which the
	  same counter is assigned  a different id either in
	  the same file (i.e. in the case we are performance profiling
	  a multithreaded program) or in multiple files.

	* igprof-regression-tests: helper script that runs 
	  a series of regression tests against files on the
	  IB server.

2009-07-17  Giulio Eulisse <giulio.eulisse@cern.ch>

	* igprof-navigator: fully working PERF_TICKS mode. Calls
	  column is hidden and cost is shown in seconds, rather
	  than in ticks.

2009-07-16  Giulio Eulisse <giulio.eulisse@cern.ch>
	
	* igprof-navigator: fixes a bug spot by Andreas which
	  was stripping "." "s" "q" "l" and "3" separately 